--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Hello World
+MLB Gameday PHP API
+===================
+
+Here is my interpretation of the MLB.com Gameday API written in PHP.
+
+
+PHP API for the MLB.com Gameday application. This project is unfinished.
